--- a/css/index.css
+++ b/css/index.css
@@ -71,3 +71,13 @@
     margin:0;
     padding:0
    }
+   .sprite {
+    display:inline-block;
+    vertical-align:text-top;
+    height:16px;
+    width:16px;
+    background-repeat:no-repeat
+   }
+   .sprite + .sprite-text {
+    padding-left:0.312em
+   }
