--- a/css/index.css
+++ b/css/index.css
@@ -81,3 +81,6 @@
    .sprite + .sprite-text {
     padding-left:0.312em
    }
+   #ywool {
+    background-image:url(/media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-32px -1536px
+   }
