--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,10 @@
-.chesttext {
+#chesttext {
    position: absolute;
    top: 12;
    right: 10;
    width: 127;
    height: 29;
  }
- .chest {
+#chest {
    　background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/chest.png');
-   　background-repeat: no-repeat;
    }
