--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import "https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css";
+@import url("https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css");
 #chesttext {
    position: absolute;
    top: 49;
