--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 #chesttext {
    position: absolute;
    top: 32;
-   height: 82;
+   right: 82;
    font-family: 'Minecraft';
    font-size: 25;
  }
