--- a/css/index.css
+++ b/css/index.css
@@ -23,21 +23,12 @@
    text-align:left;
    vertical-align:bottom
 }
-.sprite {
+.sprite-text {
    display:inline-block;
    vertical-align:text-top;
    height:16px;
    width:16px;
    background-repeat:no-repeat
-}
-.sprite + .sprite-text {
-   padding-left:0.312em
-}
-.inv-sprite,
-.slot-sprite {
-   width:32px;
-   height:32px;
-   vertical-align:middle
 }
 .sprite:hover .sprite-text {
    visibility: visible;
