--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,20 @@
    text-align:left;
    vertical-align:bottom
 }
+.invslot .sprite-text{
+   visibility: hidden;
+   position:relative;
+   display:inline-block;
+   background:#8B8B8B no-repeat center center / 32px 32px;
+   border:2px solid;
+   border-color:#373737 #FFF #FFF #373737;
+   width:32px;
+   height:32px;
+   font-size:16px;
+   line-height:1;
+   text-align:left;
+   vertical-align:bottom
+}
 .sprite-text {
    display:inline-block;
    vertical-align:text-top;
