--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@
    visibility: hidden;
    position:relative;
    display:inline-block;
-   background:#10010F no-repeat center center / 32px 32px;
+   background:#10010F no-repeat center center;
    border:2px solid;
    border-color:#240354;
    font-size:16px;
