--- a/css/index.css
+++ b/css/index.css
@@ -28,8 +28,8 @@
    position:relative;
    display:inline-block;
    background:#10010F no-repeat center center / 128px 32px;
-   border:10px solid;
-   border-width: 10px 10px 4px 20px;
+   border:5px solid;
+   background-size: auto;
    border-color:#240354;
    font-size:16px;
    height:30px;
