--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
    border:5px solid;
    border-color:#240354;
    font-size:16px;
-   height:20px;
+   height:max-content;
    width:max-content;
    color: white;
    text-align:left;
