--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,8 @@
    background:#8B8B8B no-repeat center center / 64px 64px;
    border:2px solid;
    border-color:#373737 #FFF #FFF #373737;
-   width:64px;
-   height:64px;
+   width:100px;
+   height:100px;
    font-size:16px;
    line-height:1;
    text-align:left;
@@ -35,7 +35,7 @@
    width:max-content;
    color: white;
    text-align:left;
-   vertical-align:bottom;
+   vertical-align:text-top;
    font-family: 'Minecraft';
 }
 .sprite-text {
